# p2p_password_manager

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  cog.toml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
docs/architecture/decisions/: 001-frontend-architecture.md
src/: node.rs
tests/: quic_smoke.rs
